<resources>
    <string name="app_name">Activity Lifecycle &amp; BackStack</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="start_activity_a">Start Main Activity</string>
    <string name="start_activity_b">Start Second Activity</string>
    <string name="finish_this_activity">Finish This Activity</string>
    <string name="current_state">Current State</string>
    <string name="show_activity_lifecycles">Show Activity Lifecycles</string>
</resources>
