<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/current_status" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_state"
        android:layout_gravity="center_horizontal" />

    <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal"
    android:layout_gravity="center_horizontal">
    <Button android:text="@string/start_activity_a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="startActivityA"></Button>
    <Button android:text="@string/start_activity_b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="startActivityB"></Button>

</LinearLayout>

    <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button android:text="@string/finish_this_activity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="finishActivity"
            android:layout_gravity="center_horizontal"></Button>


    </LinearLayout>



    <Button android:text="@string/show_activity_lifecycles" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="showLifecycles"
        android:layout_gravity="center_horizontal"></Button>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/activity_stack_display_main" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical"
            android:textAlignment="center">

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

</LinearLayout>
